[package]
name = "learnwell"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Framework for reinforcement learning"
repository =  "https://github.com/griccardos/learnwell/"
readme = "README.md"
keywords = ["reinforcement", "ai","qlearning","machinelearning","learning"]
categories = ["science","algorithms"]

[lib]
name = "learnwell"

[dependencies]
fastrand = "1.9.0"
fxhash = "0.2.1"
show-image = "0.13.1"
runnt = "0.6.0"
strum = { version = "0.24.1", features = ["strum_macros"] }

[dev-dependencies]

#tch = "0.10.2" # uncomment if you want to use torch backend in examples. We leave commented so no tch requirement

[profile.release]
debug = true